# atlas-gic

./: .env.example  .gitignore  README.md  pyproject.toml
prompts/agents/: biotech.md  china.md  cio.md  consumer.md  cro.md  energy.md  financials.md  macro.md  semis.md
src/atlas/: __init__.py  cli.py  config.py
src/atlas/agents/: __init__.py  autoresearch.py  backtest_loop.py  eod_cycle.py  market_data.py  scorecard.py
src/atlas/data/providers/: __init__.py  finnhub.py  massive.py
src/atlas/utils/: git_ops.py  llm.py  logging.py
